<resources>
    <string name="app_name">class2</string>
    <string name="rollButton">Roll</string>
    <string name="numberText">666</string>
    <string name="rules">The player shooting the dice is the first to bet and the other players must at least match his bet before the game can continue. If the bet cannot be matched, the shooter can either lower the bet to accommodate the other players, or handicap the odds. Once the shooter"s bet has been matched, the other players may place side betsThe player shooting the dice is the first to bet and the other players must at least match his bet before the game can continue. If the bet cannot be matched, the shooter can either lower the bet to accommodate the other players, or handicap the odds. Once the shooter"s bet has been matched, the other players may place side betsThe player shooting the dice is the first to bet and the other players must at least match his bet before the game can continue. If the bet cannot be matched, the shooter can either lower the bet to accommodate the other players, or handicap the odds. Once the shooter"s bet has been matched, the other players may place side betsThe player shooting the dice is the first to bet and the other players must at least match his bet before the game can continue. If the bet cannot be matched, the shooter can either lower the bet to accommodate the other players, or handicap the odds. Once the shooter"s bet has been matched, the other players may place side betsThe player shooting the dice is the first to bet and the other players must at least match his bet before the game can continue. If the bet cannot be matched, the shooter can either lower the bet to accommodate the other players, or handicap the odds. Once the shooter"s bet has been matched, the other players may place side betsThe player shooting the dice is the first to bet and the other players must at least match his bet before the game can continue. If the bet cannot be matched, the shooter can either lower the bet to accommodate the other players, or handicap the odds. Once the shooter"s bet has been matched, the other players may place side betsThe player shooting the dice is the first to bet and the other players must at least match his bet before the game can continue. If the bet cannot be matched, the shooter can either lower the bet to accommodate the other players, or handicap the odds. Once the shooter"s bet has been matched, the other players may place side betsThe player shooting the dice is the first to bet and the other players must at least match his bet before the game can continue. If the bet cannot be matched, the shooter can either lower the bet to accommodate the other players, or handicap the odds. Once the shooter"s bet has been matched, the other players may place side betsThe player shooting the dice is the first to bet and the other players must at least match his bet before the game can continue. If the bet cannot be matched, the shooter can either lower the bet to accommodate the other players, or handicap the odds. Once the shooter"s bet has been matched, the other players may place side betsThe player shooting the dice is the first to bet and the other players must at least match his bet before the game can continue. If the bet cannot be matched, the shooter can either lower the bet to accommodate the other players, or handicap the odds. Once the shooter"s bet has been matched, the other players may place side bets</string>
    <string name="playerName">Enter player name...</string>
    <string name="updateButton">Update Name</string>
</resources>